# movie-fe

./: .env.example  .gitlab-ci.yml  README.md  package-lock.json  package.json  tsconfig.json
backend/: .gitignore  API_DOCUMENTATION.md  Dockerfile  HTTPS_SETUP.md  LOCAL_WSL_SETUP.md  REPLICATION_GUIDE.md  SESSION_SUMMARY.md  USER_PREFERENCE_LOGIC.md  backup.sql  docker-compose.yml  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  test_watch_history.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_pref_action_alter_user_pref_adventure_and_more.py  0003_alter_user_pref_action_alter_user_pref_adventure_and_more.py  0004_usermoviehistory_usermylist.py  0005_alter_user_id_alter_usermoviehistory_id_and_more.py  0006_alter_user_id_alter_userlikelist_id_and_more.py  0007_user_is_onboarding_completed.py  0008_alter_user_id_alter_userlikelist_id_and_more.py
backend/community/: models.py  serializers.py  test_likes.py  test_reviews.py  urls.py  views.py
backend/config/: settings.py  settings_test.py  urls.py  utils.py
backend/home/: models.py  serializers.py  urls.py  views.py
backend/management/: serializers.py  urls.py  views.py
backend/movie_collector/: cookies.txt  full_collector.py
backend/movie_data/: movie_date.json  movie_hash.json  movie_iframe.json  movie_info.json
backend/movies/: models.py  recommendation.py  serializers.py  test_comments.py  test_likes.py  test_shorts_count.py  test_view_count.py  tests.py  urls.py  views.py
backend/nginx/: nginx.conf
backend/shorts/: apps.py
(+140 files in other folders)
